# MagicMountStandalone

./: README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  base.cpp  base.hpp  logging.cpp  logging.h  main.cpp  main.hpp  modules.cpp  node.hpp
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
